Update 20251003 (squashed)
Change-Id: I22154f2ac948885e8641e2effe769b4791832010